test/fixtures/errors/jade/_layout.jade
h1 This is a valid layout
!= yield